--- a/style.css
+++ b/style.css
@@ -32,16 +32,15 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: auto;
 }
 
 nav {
     background-color: #F2F2F2;
-    border-radius: 15px;
+    border-radius: 16px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 24px 24px 24px 24px;
+    margin: 24px;
     padding: 0 24px 0 24px;
     width: 100%;
     height: 96px;
@@ -95,15 +94,14 @@ nav {
 }
 
 .article-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #F2F2F2;
-    background-image: url(./images/iphone_background.svg);
-    background-size: 90%;
-    background-position: bottom;
-    background-repeat: no-repeat;
     border-radius: 15px;
     width: 100%;
     height: 433px;
-    margin-bottom: 24px;
+    margin: 0 0 24px 0;
 }
 
 .article-1 h1 {
@@ -113,8 +111,13 @@ nav {
 
 .article-1 p {
     color: #0D0D0D;
-    margin: 0 32px 0 32px;
+    margin: 0 32px 40px 32px;
     font-size: 20px;
+}
+
+.article-1 img {
+    /* width: auto; */
+    margin: 0 32px 0 32px;
 }
 
 .article-2 {
