Página inicial mobile

--- a/style.css
+++ b/style.css
@@ -12,12 +12,14 @@
 
 /* MOBILE-FIRST BY DEFAULT*/
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
     background-color: #FFFFFF;
-    color: #0D0D0D;
+    color: #1A1919;
     font-family: "Urbanist";
+    width: 100%;
     margin: 0;
 }
 
@@ -28,111 +30,104 @@ body {
 
 /* HEADER */
 .header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
+    height: 96px;
 }
 
 nav {
     background-color: #F2F2F2;
     border-radius: 16px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 24px;
-    padding: 0 24px 0 24px;
-    width: 100%;
+    width: auto;
     height: 96px;
+    margin: 24px;
+    padding: 0 32px;
 }
 
 .header-image {
-    display: grid;
-    place-items: center;
-    flex-grow: 1;
-    height: 75%;
+    margin: 0;
+    padding: 0;
 }
 
 .header-image img {
-    width: 56px;
+    width: 54px;
+    height: 32px;
 }
 
 .header-description {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 32px;
-    color: transparent;
-    flex-grow: 5;
-    margin-left: 5px;
-    margin-right: 5px;
-    height: 75%;
+    display: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.header-description p {
+    color: #FF5500;
+    margin: 0;
 }
 
 .header-hamburguer-menu {
-    display: grid;
-    place-items: center;
-    flex-grow: 1;
-    height: 75%;
+    margin: 0;
+    padding: 0;
 }
 
 .header-hamburguer-menu img {
     width: 44px;
+    height: 44px;
 }
 
 /* MAIN */
-.main {
-    width: 100%;
-}
 
 /* BOX 1 */
 .box-1 {
-    display: flex;
-    flex-direction: column;
     width: auto;
-    margin: 0 24px 24px 24px;
+    margin: 24px;
+    padding: 0;
 }
 
 .article-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     background-color: #F2F2F2;
-    border-radius: 15px;
-    width: 100%;
+    border-radius: 16px;
+    background-image: url(./images/iphone_background.svg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: 310px;
+    width: 342px;
     height: 433px;
-    margin: 0 0 24px 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 24px;
+    padding: 0;
 }
 
 .article-1 h1 {
-    margin: 32px 32px 12px 32px;
     font-size: 32px;
+    font-weight: 600;
+    margin: 0 32px;
+    padding: 32px 0;
 }
 
 .article-1 p {
-    color: #0D0D0D;
-    margin: 0 32px 40px 32px;
     font-size: 20px;
-}
-
-.article-1 img {
-    /* width: auto; */
-    margin: 0 32px 0 32px;
+    font-weight: 400;
+    margin: 0 32px;
+    padding: 0;
 }
 
 .article-2 {
-    width: 100%;
+    width: 342px;
+    margin: auto;
+    padding: 0;
+}
+
+.article-2 .gif {
+    width: 342px;
     height: 342px;
 }
 
-.gif {
-    border-radius: 15px;
-    display: grid;
-    place-items: center;
-    height: 342px;
-}
-
-.scroll {
+.article-2 .scroll {
     display: none;
 }
 
@@ -142,35 +137,40 @@ nav {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    border-radius: 15px;
+    border-radius: 16px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: auto;
+    width: 342px;
     height: 483px;
-    margin: 0 24px 120px 24px;
-    padding: 32px;
+    margin: 0 auto 120px auto;
 }
 
 .boxes-arriba {
     display: flex;
+    justify-content: left;
     width: auto;
+    height: 59px;
+    margin: 32px 32px 0 32px;
 }
 
 .boxes-arriba-unidad {
-    background-color: #FF7733;
     border-radius: 8px;
     display: grid;
     place-items: center;
+    font-size: 16px;
+    font-weight: 400;
     width: fit-content;
-    height: 65px;
-    padding: 0 10px 0 10px;
-    gap: 10px;
+    padding: 0 24px;
 }
 
-div .color-diferente {
-    font-size: 16px;
-    background-color: #9999998a;
+.color-diferente {
+    background-color: #f2f2f25b;
+}
+
+.color-diferente a {
+    text-decoration: none;
+    color: #1A1919;
 }
 
 .arriba-hidde {
@@ -181,61 +181,51 @@ div .color-diferente {
     display: flex;
     justify-content: space-between;
     color: #FFFFFF;
-    font-size: 35px;
-    width: 100%;
-}
-
-.boxes-abajo-unidad {
-    border-radius: 15px;
-    display: grid;
-    place-items: center;
-    width: fit-content;
-    padding: 0 10px 0 10px;
+    font-size: 40px;
+    font-weight: 400;
+    width: auto;
+    height: 59px;
+    margin: 0 32px 32px 32px;
 }
 
 /* BOX 3 */
 .box-3 {
-    /* background-color: #F2F2F2; */
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    width: auto;
-    margin: 0 24px 0 24px;
+    width: 342px;
+    margin: 0 auto 120px auto;
 }
 
 .box-3 h1 {
+    text-align: center;
     font-size: 40px;
     font-weight: 700;
-    margin-bottom: 20px;
-    /* margin-bottom: 40px; */
+    margin: 0 0 40px 0;
 }
 
 .box-3 p {
+    text-align: center;
     font-size: 20px;
     font-weight: 400;
-    margin-bottom: 120px;
+    margin: 0;
+    padding: 0;
 }
 
 /* SPACE */
 .space {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 120px;
+    width: 159px;
+    margin: 0 auto 120px auto;
 }
 
 .space div {
     background-color: #999999;
     width: 159px;
-    height: 1.15px;
+    height: 1px;
 }
 
+/* SEGUIR ACA!!!!! */
 /* BOX 4 */
 .box-4 {
     display: flex;
     flex-direction: column;
-    /* text-align: center;
-    justify-content: center; */
     margin: 0 24px 120px 24px;
     padding: 0;
 }
@@ -681,12 +671,14 @@ form {
     margin: 0 24px 24px 24px;
 }
 
-.form-info, .form-submit {
+.form-info,
+.form-submit {
     width: 278px;
     margin: 0 32px;
 }
 
-.form-info input, .form-info textarea {
+.form-info input,
+.form-info textarea {
     height: 40px;
     /* margin: 0 0 40px 0; */
 }
@@ -696,7 +688,9 @@ form {
     margin-bottom: 40px;
 }
 
-#email, #email, #mensagem {
+#email,
+#email,
+#mensagem {
     margin-bottom: 40px;
 }
 
@@ -704,11 +698,13 @@ form {
     margin-bottom: 70px;
 }
 
-.form-info input:focus, .form-info textarea:focus {
+.form-info input:focus,
+.form-info textarea:focus {
     outline: none;
 }
 
-input, textarea {
+input,
+textarea {
     background-color: transparent;
     width: 100%;
     color: #808080;
@@ -725,7 +721,7 @@ input, textarea {
 }
 
 button {
-    color:#FFFFFF;
+    color: #FFFFFF;
     font-size: 20px;
     background-color: #FF5500;
     border-radius: 8px;
@@ -841,95 +837,3 @@ button {
     padding: 0;
     margin-inline: 12px;
 }
-
-/* OTHER DIMENSIONS */
-/* @media (min-width: 768px) {0
-
-    h1 {
-        font-size: 64px;
-        font-weight: bold;
-    }
-
-    p {
-        font-size: 48px;
-    }
-
-    nav {
-        height: 128px;
-    }
-
-    .header-description {
-        color: #FF5500;
-    }
-
-    .header-description p {
-        border-left: 1px solid #FF5500;
-        padding-left: 24px;
-    }
-
-    .box-1 {
-        flex-direction: row;
-    }
-
-    .article-1 {
-        width: 60%;
-        height: 800px;
-        margin-right: 24px;
-        margin-bottom: 0;
-    }
-
-    .article-2 {
-        width: 40%;
-        height: 800px;
-    }
-
-    .gif {
-        height: 592px;
-        margin-bottom: 24px;
-    }
-
-    .scroll {
-        background-color: #F2F2F2;
-        border-radius: 15px;
-        display: grid;
-        place-items: center;
-        height: 184px;
-        visibility: visible;
-    }
-
-    .box-2 {
-        height: 944px;
-    }
-
-    .boxes-arriba {
-        width: 50%;
-    }
-
-    .boxes-arriba-unidad {
-        background-color: #FF7733;
-        border-radius: 15px;
-        display: grid;
-        place-items: center;
-        width: fit-content;
-        height: 65px;
-        padding: 0 10px 0 10px;
-        margin-right: 10px;
-    }
-
-    .arriba-hidde {
-        visibility: visible;
-    }
-
-
-    .boxes-abajo-unidad {
-        background-color: #FF7733;
-        border-radius: 15px;
-        display: grid;
-        place-items: center;
-        width: fit-content;
-        height: 65px;
-        margin-right: 10px;
-        padding: 0 10px 0 10px;
-    }
-
-} */
